[gd_scene load_steps=2 format=3 uid="uid://dls4nj0s8tj0a"]

[ext_resource type="Script" path="res://scenes/game/parent.gd" id="1_5m313"]

[node name="Parent" type="Node2D"]
script = ExtResource("1_5m313")

[node name="ViewportBackground" type="SubViewport" parent="."]
size = Vector2i(800, 600)

[node name="LayerBackground" type="CanvasLayer" parent="ViewportBackground"]
layer = -1
follow_viewport_enabled = true

[node name="LayerColourBase" type="CanvasLayer" parent="ViewportBackground"]
layer = -4

[node name="BlackRectangle" type="ColorRect" parent="ViewportBackground/LayerColourBase"]
z_index = -1
offset_right = 800.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="ViewportGame" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(800, 600)

[node name="LayerGame" type="CanvasLayer" parent="ViewportGame"]
layer = 0
follow_viewport_enabled = true

[node name="Camera2DGame" type="Camera2D" parent="ViewportGame/LayerGame"]

[node name="ViewportHUD" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(800, 600)

[node name="LayerHUD" type="CanvasLayer" parent="ViewportHUD"]
